Aggiunta data svolgimento all'evento

--- a/PAWM_FrontEnd/src/app/eventi/eventi.page.html
+++ b/PAWM_FrontEnd/src/app/eventi/eventi.page.html
@@ -21,6 +21,9 @@
         {{ ev.descrizione }}
       </ion-card-content>
       <ion-card-content>
+        Data svolgimento: {{ ev.dataSvolgimento }}
+      </ion-card-content>
+      <ion-card-content>
         Prezzo unitario: € {{ ev.prezzo }}
       </ion-card-content>
       <ion-card-content>
