--- a/PAWM_FrontEnd/src/app/eventi/eventi.page.html
+++ b/PAWM_FrontEnd/src/app/eventi/eventi.page.html
@@ -8,32 +8,34 @@
 <ion-content>
 
 
-  <ion-card color="medium" *ngFor="let ev of eventi; let i = index;">
+  <ion-card color="medium" *ngFor="let ev of mappa | keyvalue; let i = index;">
 
     <ion-item color="light">
-      <ion-label> {{ ev.nome }} </ion-label>
+      <ion-label> {{ ev.key.nome }} </ion-label>
     </ion-item>
 
     <ion-card-content>
-      {{ ev.descrizione }}
+      {{ ev.key.descrizione }}
     </ion-card-content>
 
     <ion-card-content>
-      Data svolgimento: {{ ev.dataSvolgimento }}
+      Data svolgimento: {{ ev.key.data }}
     </ion-card-content>
 
     <ion-card-content>
-      Prezzo unitario: € {{ ev.prezzo }}
+      Prezzo unitario: € {{ ev.key.prezzo }}
     </ion-card-content>
 
     <ion-card-content>
-      Posti disponibili: {{ ev.numeroPosti }}
+      Posti disponibili: {{ ev.value }}
     </ion-card-content>
 
     <ion-card-content>
-      <form [formGroup]="partecipantiForm" (ngSubmit)="prenota(partecipantiForm.value)" method="post">
-        <ion-input formControlName="numPartecipanti" type="number" placeholder="Numero partecipanti" required></ion-input>
-        <ion-button type="submit" color="success" [disabled]="!partecipantiForm.valid || this.ev.numeroPosti<this.partecipantiForm.get('numPartecipanti').value">Prenota</ion-button>
+  <!--    <ion-input #v  type="number">  </ion-input>
+      <ion-button [disabled]="!(v.value>0 && v.value<ev.value)"></ion-button>-->
+      <form [formGroup]="partecipantiForm" (ngSubmit)="prenota(ev.key, partecipantiForm.value)" method="post">
+        <ion-input #v formControlName="numPartecipanti" type="number" placeholder="Numero partecipanti" required></ion-input>
+       <ion-button type="submit" color="success" [disabled]="!(v.value>0 && v.value<=this.ev.value)">Prenota</ion-button>
       </form>
     </ion-card-content>
     
