Aggiunta pagina delle informazioni, correzioni eventuali bug e aggiunta di nuove funzionalità

--- a/PAWM_FrontEnd/src/app/edit-utente/edit-utente.page.html
+++ b/PAWM_FrontEnd/src/app/edit-utente/edit-utente.page.html
@@ -14,7 +14,7 @@
     </ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button>
-        <ion-icon name="add"></ion-icon>
+        <ion-icon name="add" (click)="goToEventi()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
         <ion-icon name="today-outline" (click)="goToPrenotazioni()"></ion-icon>
@@ -23,7 +23,7 @@
         <ion-icon name="library-outline" (click)="goToStorico()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
-        <ion-icon name="information-outline"></ion-icon>
+        <ion-icon name="information-outline" (click)="goToInformazioni()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
         <ion-icon name="exit-outline" color="danger" (click)="logOut()"></ion-icon>
@@ -34,6 +34,18 @@
   <form [formGroup]="userForm" (ngSubmit)="aggiornamentoDati(userForm.value)" novalidate>
     <ion-card>
       <ion-card-content>
+
+        <ion-item lines="full">
+          <ion-label>Nome: {{utente?.nome}}</ion-label>
+        </ion-item>
+
+        <ion-item lines="full">
+          <ion-label>Cognome: {{utente?.cognome}}</ion-label>
+        </ion-item>
+
+        <ion-item lines="full">
+          <ion-label>Data di Nascita: {{utente?.dataNascita}}</ion-label>
+        </ion-item>
 
         <ion-item lines="full">
           <ion-label position="floating">Email</ion-label>
@@ -59,10 +71,13 @@
           </div>
         </ng-container>
 
-        <ion-button type="submit" color="success" expand="block"
-          [disabled]="!userForm.valid || (userForm.get('email').value==utente?.email && userForm.get('password').value == '')">
-          Aggiorna Dati</ion-button>
+        <ion-text color="danger" *ngIf="userForm.valid && userForm.get('email').value!=utente?.email && userForm.get('password').value != '' ">Non è possibile cambiare E-mail e Password contemporaneamente</ion-text>
 
+        <ion-button type="submit" color="success" expand="block" [disabled]="!userForm.valid || 
+          (userForm.get('email').value==utente?.email && userForm.get('password').value == '') || 
+          (userForm.get('email').value!=utente?.email && userForm.get('password').value != '')">
+          Aggiorna Dati</ion-button>
+          <ion-button (click)="cancellaAccount()" color="danger" expand="block" fill="outline">Elimina Account</ion-button>
       </ion-card-content>
     </ion-card>
   </form>
