--- a/PAWM_FrontEnd/src/app/eventi/eventi.page.html
+++ b/PAWM_FrontEnd/src/app/eventi/eventi.page.html
@@ -1,11 +1,37 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Eventi</ion-title>
   </ion-toolbar>
 </ion-header>
 
 
 <ion-content>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="arrow-up-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button>
+        <ion-icon name="today-outline" (click)="goToPrenotazioni()"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="library-outline" (click)="goToStorico()"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="settings-outline" (click)="goToEditUtente()"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="information-outline" (click)="goToInformazioni()"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="exit-outline" color="danger" (click)="logOut()"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 
 
   <ion-card color="medium" *ngFor="let ev of mappa | keyvalue; let i = index;">
