--- a/PAWM_FrontEnd/src/app/storico/storico.page.html
+++ b/PAWM_FrontEnd/src/app/storico/storico.page.html
@@ -14,7 +14,7 @@
     </ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button>
-        <ion-icon name="add"></ion-icon>
+        <ion-icon name="add" (click)="goToEventi()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
         <ion-icon name="today-outline" (click)="goToPrenotazioni()"></ion-icon>
@@ -23,7 +23,7 @@
         <ion-icon name="settings-outline" (click)="goToEditUtente()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
-        <ion-icon name="information-outline"></ion-icon>
+        <ion-icon name="information-outline" (click)="goToInformazioni()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
         <ion-icon name="exit-outline" color="danger" (click)="logOut()"></ion-icon>
